WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
68781
DFG tracking of the value in cachedResultRegister does not handle op_mov correctly
https://bugs.webkit.org/show_bug.cgi?id=68781
Summary
DFG tracking of the value in cachedResultRegister does not handle op_mov corr...
Filip Pizlo
Reported
2011-09-25 15:44:37 PDT
The old JIT implementation of op_mov does not handle the cachedResultRegister the same way as other operations. The DFG's tracking does not take this into account.
Attachments
the patch
(3.72 KB, patch)
2011-09-25 16:11 PDT
,
Filip Pizlo
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2011-09-25 16:11:04 PDT
Created
attachment 108613
[details]
the patch
Filip Pizlo
Comment 2
2011-09-25 16:40:17 PDT
Landed in
r95925
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug